OpenJMLTest/test/gitbug573c/expected
test/gitbug573c/java/lang/Integer.jml:5: error: ';' expected
    xxx yy y zzz
          ^
test/gitbug573c/java/lang/Integer.jml:5: error: ';' expected
    xxx yy y zzz
                ^
warning: There is no java file on the sourcepath corresponding to the given jml file: test/gitbug573c/java/lang/Integer.jml
Continuing bravely despite parsing errors
Operation not performed because of parse or type errors
2 errors
1 warning
